tests/good/break_continue.lt
void main(){
    int i = 0;
    while (true)
    {
        if (i > 5)
            break;
        i = i + 1;
        
        if (i % 2 == 0)
            continue;
        print(i);
    }
}