tests/bad/static_typing2.lt

void main(){
    int a = 0;
    boolean x = true;
    print(a + x);
}